k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: books-api
  labels:
    app.kubernetes.io/name: books-api
