k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-api
  namespace: books-api
  labels:
    app.kubernetes.io/name: books-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: books-api
  ports:
    - name: http
      port: 80
      targetPort: http
